--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -47,6 +47,54 @@
     <% end %>
 </div>
 
+<div class="about-page">
+  <div class="jumbotron">
+    <h1>Yaad</h1>
+    <p>Enjoy the benefits of spaced repition learning.</p>
+  </div> 
+  <div class="bs-callout bs-callout-info">
+    <h2>How do I use Yaad?</h2>
+    <p>
+    Every time you load Yaad, you will receieve up to 10 concepts to learn, each created by you.
+    Each concept presents you with a question (be it a term to define, a math problem to solve, 
+    or an image to recall the word for) and it is your job to try to answer it. Once you are ready
+    to see the solution, click <i>Show Answer</i>. You are then presented with four choices to
+    record if your answer was correct and to give your confidence when answering. This information
+    is used by the learning algorithm to determine the optimal time to ask a question again. When
+    you have completed all the concepts provided, press the <i>New Concepts</i> button to get a new set.
+    </p>
+    <p>
+    To add or delete concepts, click the <i>manage</i> tab. To add concepts, type in a question and
+    answer in the top left card and click <i>Create Concept</i>. To delete concepts, simply click the
+    <i>Delete</i> button for the relevant concept card.
+    </p>
+  </div>
+  <div class="bs-callout bs-callout-info">
+    <h2>Why should I use Yaad?</h2>
+    <p>
+    It has been shown in much academic research that repetition based learning over increments of time
+    following certain statistical distributions will help people learn most effectively. Put in simpler
+    terms, if you are shown a particular concept over a certain interval, you will learn it really well.
+    Yaad uses the SM-2 algorithm to achieve this. By using Yaad, you will more quickly commit concepts
+    to both your long-term and short-term memory.
+    </p>
+  </div>
+  <div class="bs-callout bs-callout-info">
+    <h2>When should I use Yaad?</h2>
+    <p>
+    Yaad is useful to review any time, but you can really benefit from using it during short periods of
+    downtime. Get to class early? Got time to kill on the bus? Waiting for water to boil? Using your phone
+    in the bathroom? These are all perfect times for a quick review.
+    </p>
+    <p>
+    As far as things you can review goes, the sky is the limit. You might be reading a technical book and
+    want to remember a term you encountered for more than the next five minutes. Same goes for studying a
+    foreign language or history book. Maybe you are trying to remember common functions in a programming
+    language. You might even be trying to review examples of different types of physics problems.
+    </p>
+  </div>
+</div>
+
 <script>
 $('.new-concept').click(function(e) {
     e.preventDefault();
