--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
         <ul class="nav nav-pills pull-right">
           <li class="active reloader" data-page="learn-page"><a href="#">Learn</a></li>
           <li data-page="manage-page"><a href="#" data-page="manage-page">Manage</a></li>
+          <li data-page="about-page"><a href="#" data-page="about-page">About</a></li>
           <li><%= link_to "Log out", destroy_user_session_path, :method => :delete  %></li>
         </ul>
         <h3 class="text-muted"><span class="title-half">Yaad</span></h3>
