--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -50,47 +50,53 @@
 <div class="about-page">
   <div class="jumbotron">
     <h1>Yaad</h1>
-    <p>Enjoy the benefits of spaced repition learning.</p>
+    <p>Optimize Learning</p>
   </div> 
   <div class="bs-callout bs-callout-info">
-    <h2>How do I use Yaad?</h2>
+    <h2>What is Yaad?</h2>
     <p>
-    Every time you load Yaad, you will receieve up to 10 concepts to learn, each created by you.
-    Each concept presents you with a question (be it a term to define, a math problem to solve, 
-    or an image to recall the word for) and it is your job to try to answer it. Once you are ready
-    to see the solution, click <i>Show Answer</i>. You are then presented with four choices to
-    record if your answer was correct and to give your confidence when answering. This information
-    is used by the learning algorithm to determine the optimal time to ask a question again. When
-    you have completed all the concepts provided, press the <i>New Concepts</i> button to get a new set.
-    </p>
-    <p>
-    To add or delete concepts, click the <i>manage</i> tab. To add concepts, type in a question and
-    answer in the top left card and click <i>Create Concept</i>. To delete concepts, simply click the
-    <i>Delete</i> button for the relevant concept card.
+    Yaad is an application designed for learning concepts using efficient repetition
+    techniques and doing so in the easiest most intuitive way possible.
     </p>
   </div>
   <div class="bs-callout bs-callout-info">
-    <h2>Why should I use Yaad?</h2>
+    <h2>How do I use Yaad?</h2>
     <p>
-    It has been shown in much academic research that repetition based learning over increments of time
-    following certain statistical distributions will help people learn most effectively. Put in simpler
-    terms, if you are shown a particular concept over a certain interval, you will learn it really well.
-    Yaad uses the SM-2 algorithm to achieve this. By using Yaad, you will more quickly commit concepts
-    to both your long-term and short-term memory.
+    First you input the concepts you would like to learn on the <i>Manage</i> page. 
+    Then, whenever you visit the application you will be quizzed on the concepts.
+    The application will notify you when you have successfully completed all the concepts 
+    due for that day.
     </p>
+    <p>
+    After that, if you have extra time Yaad will give you additional concepts that 
+    were not due that day for more review. It's that simple!  
+    </p>
+  </div>
+  <div class="bs-callout bs-callout-info">
+    <h2>How is Yaad better for learning?</h2>
+    <p>
+    Based on results from neuroscience studies and intuition we know when someone learns 
+    a new concept they initially need to repeat it frequently then over time they can 
+    repeat it less often while still retaining the same amount of knowledge.
+    </p>
+    <p>
+    Yaad uses a variant of the <i>SM-2</i> algorithm to formalize this phenomenon into 
+    a learning technique.
   </div>
   <div class="bs-callout bs-callout-info">
     <h2>When should I use Yaad?</h2>
     <p>
-    Yaad is useful to review any time, but you can really benefit from using it during short periods of
-    downtime. Get to class early? Got time to kill on the bus? Waiting for water to boil? Using your phone
-    in the bathroom? These are all perfect times for a quick review.
+    Yaad is useful to review any time, but you can really benefit from using it during 
+    short periods of downtime. Get to class early? Got time to kill on the bus? Waiting 
+    for water to boil? Using your phone in the bathroom? These are all perfect times 
+    for a quick review.
     </p>
     <p>
-    As far as things you can review goes, the sky is the limit. You might be reading a technical book and
-    want to remember a term you encountered for more than the next five minutes. Same goes for studying a
-    foreign language or history book. Maybe you are trying to remember common functions in a programming
-    language. You might even be trying to review examples of different types of physics problems.
+    As far as things you can review goes, the sky's the limit. You might be reading 
+    a technical book and want to remember a term you encountered 
+    for more than the next five minutes. Same goes for studying a foreign language or 
+    history book. Maybe you are trying to remember common functions in a programming 
+    language. You might even be trying to review examples of different types of physics problems. 
     </p>
   </div>
 </div>
