set the manage and about pages to hidden by default so they dont show up on page load

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,7 +22,7 @@
     <p class="position-viewer"><span class="current-position"><%= starting_position %></span>/<%= @concepts_to_learn.size %></p>
 </div>
 
-<div class="manage-page">
+<div class="manage-page" style="display: none;">
     <div class="concept-edit">
         <form role="form" id="new-concept-form">
             <div class="form-group">
@@ -47,7 +47,7 @@
     <% end %>
 </div>
 
-<div class="about-page">
+<div class="about-page" style="display: none;">
   <div class="jumbotron">
     <h1>Yaad</h1>
     <p>Optimize Learning</p>
