--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -109,15 +109,11 @@
 </div>
 
 <script>
-//===================== //
+//======================//
 // Learn page functions //
-//===================== //
+//======================//
 
   // functional bindings and other stateful modifications
-$('.show-answer-button').click(function(event) {
-    event.preventDefault();
-    showAnswer()($(".concept-card:visible"));
-});
 
 var current_position = 0;
 var totalCount = <%= @concepts_to_learn.present? ? @concepts_to_learn.size : 0 %>;
@@ -125,41 +121,30 @@ var concepts_completed = 0;
 
 $('.concept-card').first().show();
 
-function nextConcept() {
-    if (concepts_completed == totalCount) {
-      alert('You have completed all the concepts due today.');
-      concepts_completed = 0;
-    }
-    $('*[data-position="' + current_position + '"]').hide();
-    if(current_position < totalCount -1) {
-        current_position += 1;
-    }
-    else {
-        current_position = 0;
-    }
-    if( totalCount > 0) {
-      $('.current-position').html(current_position+1);
-    }
-    $('*[data-position="' + current_position + '"]').show();
-    hideAnswer()($(".concept-card:visible"));
-    console.log($('*[data-position="' + current_position + '"]'));
-};
+$('.show-answer-button').click(function(event) {
+    event.preventDefault();
+    showAnswer()($(".concept-card:visible"));
+});
 
 $('.concept-next-button').click(function(event){
-    nextConcept();
+    setNextConcept(function(visibleConcept){ visibleConcept.hide(); });
 });
 
 <% @concepts_to_learn.each_with_index do |concept, index| %>
     $('#incorrect-btn<%= concept.id %>').click(function(event) {
+        event.preventDefault();
         incorrectResponseHandler(<%= concept.id %>, '0')();
     });
     $('#guess-btn<%= concept.id %>').click(function(event) {
+        event.preventDefault();
         incorrectResponseHandler(<%= concept.id %>, '3')();
     });
     $('#hesitant-btn<%= concept.id %>').click(function(event) {
+        event.preventDefault();
         correctResponseHandler(<%= concept.id %>, '4')();
     });
     $('#easy-btn<%= concept.id %>').click(function(event) {
+        event.preventDefault();
         correctResponseHandler(<%= concept.id %>, '5')();
     });
 <% end %>
@@ -177,6 +162,34 @@ function responseAjaxCall(conceptId,responseQuality){
             console.log('error');
           }
       });
+};
+
+function setNextConcept(howToRemove){
+  var currentConcept = $(".concept-card:visible");
+  var nextConcept = $(".concept-card:visible").next(".concept-card");
+
+  hideAnswer()(currentConcept);
+  howToRemove(currentConcept);
+
+  if (nextConcept.length > 0) {
+    nextConcept.show();
+  } else {
+    $(".concept-card").first().show();
+  }
+};
+
+function updateConceptIndicators(){
+  if (concepts_completed == totalCount) {
+    concepts_completed = 0;
+  }
+  if(current_position < totalCount -1) {
+    current_position += 1;
+  } else {
+    current_position = 0;
+  }
+  if( totalCount > 0) {
+    $('.current-position').html(current_position+1);
+  }
 };
 
   // helper functional functions
@@ -198,28 +211,36 @@ function hideAnswer(){
 };
 
 function correctResponseHandler(conceptId, responseQuality){
-  event.preventDefault();
   return (function(){
-    $(".concept-card:visible").remove();
-    $("#total-count").html(--totalCount);
     concepts_completed++;
-    nextConcept();
+
+    setNextConcept(function(visibleConcept){
+                   visibleConcept.remove();
+                   $("#total-count").html(--totalCount);
+    });
+
+    updateConceptIndicators();
+
     responseAjaxCall(conceptId, responseQuality);
   });
 };
 
 function incorrectResponseHandler(conceptId, responseQuality){
-  event.preventDefault();
   return (function(){
-    $(".concept-card:visible").children(".response-quality-options").children().prop("disabled",true)
-    nextConcept();
+
+    setNextConcept(function(visibleConcept){
+                   visibleConcept.hide();
+                   visibleConcept.children(".response-quality-options").children().prop("disabled",true);
+    });
+    updateConceptIndicators();
+
     responseAjaxCall(conceptId, responseQuality);
   });
 };
 
-//====================== //
+//=======================//
 // Manage page functions //
-//====================== //
+//=======================//
 
 $('.new-concept').click(function(e) {
     e.preventDefault();
